--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Record Store</title>
   <style>
-    :root { --header-h: 118px; }
-    body { font-family: Arial, sans-serif; margin: 0; background: #fff; color: #111; }
+    html, body { margin: 0; padding: 0; height: 100%; } body { font-family: Arial, sans-serif; background: #fff; color: #111; display: flex; flex-direction: column; }
     .header { position: sticky; top: 0; z-index: 50; background: #fff; border-bottom: 1px solid #e6e6e6; padding: 12px 14px; }
     .top { display: flex; align-items: center; gap: 10px; flex-wrap: wrap; }
     .title { font-size: 20px; font-weight: 800; margin-right: 8px; }
@@ -17,16 +16,16 @@
     .btn { border: 1px solid #d6d6d6; background: #fff; padding: 8px 10px; border-radius: 10px; cursor: pointer; }
     .btn:disabled { opacity: .45; cursor: not-allowed; }
     .cartbtn { margin-left: auto; white-space: nowrap; }
-    .content { height: calc(100vh - var(--header-h)); overflow: auto; padding: 14px; }
-    .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(320px, 1fr)); gap: 12px; }
-    .card { border: 1px solid #eee; border-radius: 14px; padding: 12px; display: flex; gap: 12px; }
-    .cover { width: 88px; height: 88px; border-radius: 10px; object-fit: cover; background: #f5f5f5; flex: 0 0 auto; }
+    .content { flex: 1 1 auto; min-height: 0; overflow-y: auto; padding: 14px; }
+    .grid { display: grid; grid-template-columns: minmax(0, 1fr); gap: 6px; }
+    .card { border: 1px solid #eee; border-radius: 10px; padding: 6px 8px; display: flex; align-items: center; gap: 8px; }
+    .cover { width: 64px; height: 64px; border-radius: 8px; object-fit: cover; background: #f5f5f5; flex: 0 0 auto; }
     .meta { flex: 1 1 auto; min-width: 0; }
     .artist { font-weight: 800; }
     .title2 { margin-top: 2px; }
     .line { margin-top: 6px; font-size: 12px; color: #333; }
     .muted { color: #666; }
-    .row { display: flex; gap: 8px; align-items: center; flex-wrap: wrap; margin-top: 10px; }
+    .row { display: flex; gap: 6px; align-items: center; flex-wrap: wrap; margin-top: 4px; }
     .price { font-weight: 900; }
     .badge { font-size: 12px; padding: 4px 8px; border-radius: 999px; border: 1px solid #ddd; background: #fafafa; }
     .badge.pending { background: #fff4b8; border-color: #e5d27a; }
@@ -60,30 +59,22 @@
 .cartrow .meta { min-width: 0; overflow-wrap: anywhere; word-break: break-word; }
 #cartText { overflow-x: hidden; white-space: pre-wrap; }
 
-  </style>
+  
+    .pricecol { min-width: 56px; text-align: center; font-weight: 900; font-size: 13px; }
+    .controlsRow { display: flex; flex-direction: column; align-items: center; gap: 4px; min-width: 40px; }
+    .controlsRow .btn { padding: 3px 5px; font-size: 11px; }
+    .controlsRow .small { font-size: 11px; }
+</style>
 </head>
 <body>
   <div class="header">
-    <div class="top">
-<div class="title">Records For Sale</div>
-
-      
-    <div class="intro">
-      <p><b>Collection focus:</b> This catalog focuses on classical, jazz, folk/world, country, and vocal pop records — <b>not a rock-heavy collection</b>.</p>
-      <p class="small">Most titles date from the <b>1950s–1980s</b> and represent traditional pressings rather than new releases.</p>
-      <p><b>How to use:</b> Browse, filter, and search. Click <b>Add</b> to put records in your cart, then open <b>Cart</b> to review.</p>
-      <p class="muted small">Condition is assumed to be generally good unless noted, but grading can vary—please message me if you want details before buying.</p>
-    </div>
-<button id="cartOpen" class="btn cartbtn">Cart (0)</button>
-    </div>
-    <div class="sub">Search + filter. Status/condition may be uninspected unless noted.</div>
-
     <div class="controls">
+      <button id="helpOpen" class="btn">Help / About</button>
+      <button id="cartOpen" class="btn cartbtn">Cart (0)</button>
       <input id="q" placeholder="Search artist or title..." />
       <select id="artist"><option value="">All artists</option></select>
       <select id="genre"><option value="">All genres</option></select>
       <select id="decade"><option value="">All decades</option></select>
-      <label class="small"><input type="checkbox" id="hidePending" checked /> Hide pending/sold</label>
       <button id="clear" class="btn">Clear</button>
     </div>
   </div>
@@ -206,8 +197,9 @@ function updateCartButton(){
     return "";
   }
 
+  const HIDE_PENDING = true;
   function isHiddenByStatus(it){
-    const hide = $("hidePending").checked;
+    const hide = HIDE_PENDING;
     if(!hide) return false;
     const s = (it.status||"available").toLowerCase();
     return (s==="pending" || s==="sold");
@@ -256,77 +248,75 @@ function updateCartButton(){
     const grid = $("grid");
     grid.innerHTML = "";
     state.filtered.forEach(it=>{
-      const s = (it.status||"available").toLowerCase();
-      const disabled = (s==="pending"||s==="sold");
-      const inCart = state.cart[it.release_id]||0;
+      const inCart = state.cart[it.release_id] ? 1 : 0;
 
       const card = document.createElement("div");
-      card.className="card";
+      card.className = "card";
 
-      const img = document.createElement("img");
-      img.className="cover";
-      img.alt = `${it.artist} - ${it.title}`;
-      img.src = it.img || "";
-      img.loading = "lazy";
-      card.appendChild(img);
+      // Price on far left
+      const priceCol = document.createElement("div");
+      priceCol.className = "pricecol";
+      const priceText = money(it.price);
+      priceCol.textContent = priceText || "";
 
-      const meta = document.createElement("div");
-      meta.className="meta";
-      meta.innerHTML = `
-        <div class="artist">${escapeHtml(it.artist || "")}</div>
-        <div class="title2">${escapeHtml(it.title || "")}</div>
-        <div class="line">
-          <span class="nowrap">${escapeHtml(it.year || "?" )}</span>
-          <span class="muted">•</span>
-          <span class="nowrap">${escapeHtml(it.label || "")}</span>
-          <span class="muted">•</span>
-          <span class="nowrap">${escapeHtml(it.catno || "")}</span>
-        </div>
-        <div class="line muted">${escapeHtml(it.genre || "")}${it.style ? " • " + escapeHtml(it.style) : ""}</div>
-        <div class="row">
-          ${badge(it.status)}
-          ${it.price ? `<span class="price">${escapeHtml(money(it.price))}</span>` : ""}
-          ${it.qty>1 ? `<span class="qtypill">Qty: ${it.qty}</span>` : ""}
-        </div>
-      `;
-      card.appendChild(meta);
-
-      const row = document.createElement("div");
-      row.className="row";
-      row.style.marginTop="10px";
+      // Vertical controls column next: -, +, ? buttons
+      const controls = document.createElement("div");
+      controls.className = "controlsRow";
 
       const minus = document.createElement("button");
-      minus.className="btn";
-      minus.textContent="-";
-      minus.disabled = disabled || inCart<=0;
+      minus.className = "btn";
+      minus.textContent = "-";
+      minus.disabled = inCart <= 0;
       minus.onclick = ()=>{
-        state.cart[it.release_id] = Math.max(0, (state.cart[it.release_id]||0) - 1);
-        if(state.cart[it.release_id]===0) delete state.cart[it.release_id];
-        saveCart(); updateCartButton(); applyFilters();
+        if(!state.cart[it.release_id]) return;
+        delete state.cart[it.release_id];
+        saveCart(); updateCartButton(); render();
       };
 
       const plus = document.createElement("button");
-      plus.className="btn";
-      plus.textContent="+";
-      plus.disabled = disabled;
+      plus.className = "btn";
+      plus.textContent = "+";
+      plus.disabled = inCart > 0;
       plus.onclick = ()=>{
-        state.cart[it.release_id] = (state.cart[it.release_id]||0) + 1;
-        saveCart(); updateCartButton(); applyFilters();
+        if(state.cart[it.release_id]) return;
+        state.cart[it.release_id] = 1;
+        saveCart(); updateCartButton(); render();
       };
 
-      const qty = document.createElement("span");
-      qty.className="small muted";
-      qty.textContent = `In cart: ${inCart}`;
+      const infoBtn = document.createElement("button");
+      infoBtn.className = "btn";
+      infoBtn.textContent = "?";
+      infoBtn.onclick = ()=>openItemModal(it);
 
-      row.appendChild(minus);
-      row.appendChild(plus);
-      row.appendChild(qty);
+      controls.appendChild(minus);
+      controls.appendChild(plus);
+      controls.appendChild(infoBtn);
 
-      meta.appendChild(row);
+      // Image next
+      const img = document.createElement("img");
+      img.className = "cover";
+      img.loading = "lazy";
+      img.src = it.img || "";
+      img.alt = `${it.artist || ""} — ${it.title || ""}`.trim();
+      img.onerror = ()=>{ img.style.visibility="hidden"; };
+
+      // Title + artist stacked vertically to the right
+      const meta = document.createElement("div");
+      meta.className = "meta";
+      meta.innerHTML = `
+        <div class="artist">${escapeHtml(it.artist || "")}</div>
+        <div class="title2">${escapeHtml(it.title || "")}</div>
+      `;
+
+      card.appendChild(priceCol);
+      card.appendChild(controls);
+      card.appendChild(img);
+      card.appendChild(meta);
 
       grid.appendChild(card);
     });
     setFilterOptions();
+
   }
 
   function escapeHtml(s){
@@ -336,6 +326,40 @@ function updateCartButton(){
       .replaceAll(">","&gt;")
       .replaceAll('"',"&quot;")
       .replaceAll("'","&#39;");
+  }
+
+
+  function openItemModal(it){
+    const modal = $("itemModal");
+    if(!modal) return;
+    const titleEl = $("itemModalTitle");
+    const bodyEl = $("itemModalBody");
+    if(titleEl){
+      titleEl.textContent = [it.artist || "", it.title || ""].filter(Boolean).join(" — ");
+    }
+    if(bodyEl){
+      const year = it.year || "?";
+      const label = it.label || "";
+      const catno = it.catno || "";
+      const genre = it.genre || "";
+      bodyEl.innerHTML = `
+        <p><b>Year:</b> ${escapeHtml(year)}</p>
+        <p><b>Label:</b> ${escapeHtml(label)}</p>
+        <p><b>Catalog #:</b> ${escapeHtml(catno)}</p>
+        <p><b>Genre:</b> ${escapeHtml(genre)}</p>
+      `;
+    }
+    modal.style.display = "flex";
+    modal.classList.add("open");
+    modal.setAttribute("aria-hidden","false");
+  }
+
+  function closeItemModal(){
+    const modal = $("itemModal");
+    if(!modal) return;
+    modal.style.display = "none";
+    modal.classList.remove("open");
+    modal.setAttribute("aria-hidden","true");
   }
 
   function openCart(){
@@ -356,11 +380,13 @@ $("modal").classList.add("open");
     loadCart();
     updateCartButton();
 
-    $("q").addEventListener("input", ()=>applyFilters());
+    const itemClose = $("itemModalClose");
+    if(itemClose){ itemClose.addEventListener("click", closeItemModal); }
+
+$("q").addEventListener("input", ()=>applyFilters());
     $("artist").addEventListener("change", ()=>applyFilters());
     $("genre").addEventListener("change", ()=>applyFilters());
     $("decade").addEventListener("change", ()=>applyFilters());
-    $("hidePending").addEventListener("change", ()=>applyFilters());
     $("clear").addEventListener("click", ()=>{
       $("q").value="";
       $("artist").value="";
@@ -406,5 +432,43 @@ $("modal").classList.add("open");
   boot();
 })();
 </script>
+
+
+<div id="itemModal" class="modal" aria-hidden="true" style="display:none">
+  <div class="modalbox">
+    <div class="modalhead">
+      <h2 id="itemModalTitle">Record details</h2>
+      <button id="itemModalClose" class="btn close">Close</button>
+    </div>
+    <div class="modal-body small" id="itemModalBody" style="overflow-y:auto;max-height:70vh;"></div>
+  </div>
+</div>
+
+<div id="helpModal" class="modal" aria-hidden="true" style="display:none">
+  <div class="modalbox">
+    <div class="modalhead">
+      <h2>About This Catalog</h2>
+      <button id="helpClose" class="btn close">Close</button>
+    </div>
+    <div class="modal-body small" style="overflow-y:auto;max-height:70vh;">
+      <p><b>Collection focus:</b> Classic pop, jazz, easy listening, and vocal LPs.</p>
+      <p><b>How to use:</b> Browse, use search and filters, then tap <b>Add to Cart</b> on anything you’re interested in.</p>
+      <p>The cart builds a simple text list you can <b>copy/paste into a Facebook Marketplace message</b> when you’re ready to reach out.</p>
+      <p>Status/condition may be uninspected unless noted. <b>Damaged records will be discounted.</b></p>
+      <p>Feel free to message for detailed grading or questions — happy to help.</p>
+    </div>
+  </div>
+</div>
+
+<script>
+(function(){
+  const hm = document.getElementById("helpModal");
+  const open = document.getElementById("helpOpen");
+  const close = document.getElementById("helpClose");
+  if(open){ open.onclick = ()=>{ hm.style.display='flex'; hm.classList.add('open'); hm.setAttribute('aria-hidden','false'); }; }
+  if(close){ close.onclick = ()=>{ hm.style.display='none'; hm.classList.remove('open'); hm.setAttribute('aria-hidden','true'); }; }
+})();
+</script>
+
 </body>
 </html>
